# ds-project

./: CMakeLists.txt  README.md  style_backup.css
cpp/: bindings.cpp
cpp/include/: BST.h  LinkedList.h  Patient.h  PatientManager.h  Queue.h  Stack.h
docs/: PROJECT_DOCUMENTATION.md  viva_notes.md
frontend/: index.html  script.js  style.css
python/: server.py
python/data/: patients.json
